WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81639
Fix the error type in JSAudioBufferSourceNodeCustom to pass layout test.
https://bugs.webkit.org/show_bug.cgi?id=81639
Summary
Fix the error type in JSAudioBufferSourceNodeCustom to pass layout test.
Sanghyun Park
Reported
2012-03-20 02:06:32 PDT
The layout tests for the WebAudio APIs have all passed using Chromium, but encountered 1 crash error in Gtk port. Crash List - LayoutTest/webaudio/audiobuffersource-channels.html The reason for causing crash is that it returns a wrong type (e.g., SyntaxError should have been TypeError).
Attachments
Patch
(1.87 KB, patch)
2012-03-25 23:21 PDT
,
Sanghyun Park
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sanghyun Park
Comment 1
2012-03-25 23:21:52 PDT
Created
attachment 133731
[details]
Patch Initial patch!
Chris Rogers
Comment 2
2012-03-28 10:33:31 PDT
This seems good, but adding Eric Carlson since he likely knows more about details of JSC bindings.
Eric Carlson
Comment 3
2012-03-28 17:50:12 PDT
(In reply to
comment #0
)
> The layout tests for the WebAudio APIs have all passed using Chromium, > but encountered 1 crash error in Gtk port. > > Crash List > - LayoutTest/webaudio/audiobuffersource-channels.html > > The reason for causing crash is that it returns a wrong type (e.g., > SyntaxError should have been TypeError).
Do you mean that the test actually crashed, or that it simply failed?
Sanghyun Park
Comment 4
2012-03-28 18:10:24 PDT
(In reply to
comment #3
)
> (In reply to
comment #0
) > > The layout tests for the WebAudio APIs have all passed using Chromium, > > but encountered 1 crash error in Gtk port. > > > > Crash List > > - LayoutTest/webaudio/audiobuffersource-channels.html > > > > The reason for causing crash is that it returns a wrong type (e.g., > > SyntaxError should have been TypeError). > > Do you mean that the test actually crashed, or that it simply failed?
Sorry for the confusion - the test was simply failed due to the error type mismatch.
Eric Carlson
Comment 5
2012-03-29 08:47:31 PDT
(In reply to
comment #4
)
> > Sorry for the confusion - the test was simply failed due to the error type mismatch.
No problem! I just wanted to make sure I understood the issue.
WebKit Review Bot
Comment 6
2012-03-29 08:55:02 PDT
Comment on
attachment 133731
[details]
Patch Clearing flags on attachment: 133731 Committed
r112535
: <
http://trac.webkit.org/changeset/112535
>
WebKit Review Bot
Comment 7
2012-03-29 08:55:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug