Fix the error type in JSAudioBufferSourceNodeCustom to pass layout test. https://bugs.webkit.org/show_bug.cgi?id=81639

Patch by Sanghyun Park <sh919.park@samsung.com> on 2012-03-29
Reviewed by Eric Carlson.

Test : LayoutTest/webaudio/audiobuffersource-channels.html

* bindings/js/JSAudioBufferSourceNodeCustom.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@112535 bbb929c8-8fbe-4397-9dbb-9b2b20218538