third_party/WebKit/Source/WebCore/bindings/js/JSAudioBufferSourceNodeCustom.cpp
@@ -1,6 +1,7 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
  * Copyright (C) 2010, Google Inc. All rights reserved.
+ * Copyright (C) 2012 Samsung Electronics
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -43,12 +44,12 @@ void JSAudioBufferSourceNode::setBuffer(ExecState* exec, JSValue value)
     AudioBufferSourceNode* imp = static_cast<AudioBufferSourceNode*>(impl());
     AudioBuffer* buffer = toAudioBuffer(value);
     if (!buffer) {
-        throwError(exec, createSyntaxError(exec, "Value is not of type AudioBuffer"));
+        throwError(exec, createTypeError(exec, "Value is not of type AudioBuffer"));
         return;
     }
     
     if (!imp->setBuffer(buffer))
-        throwError(exec, createSyntaxError(exec, "AudioBuffer unsupported number of channels"));
+        throwError(exec, createTypeError(exec, "AudioBuffer unsupported number of channels"));
 }
 
 } // namespace WebCore
